--- a/octapush.docs/03.Installations.md
+++ b/octapush.docs/03.Installations.md
@@ -2,14 +2,13 @@
 
 On this page, I will explain about how to installing **`octapush.docs`**.
 
-1. [Download](/#02.Download.md) **`octapush.docs`** package, based on available [version](/#06.Versions.md).
+1. [Download](/#02.Download.md) the **`octapush.docs`** package according to the [version](/#06.Versions.md) you want.
 2. Extract the package into folder as you can see on the image below.
 ![Image of Yaktocat](https://octodex.github.com/images/yaktocat.png)
 3. Open **index.html** and **configs.js** using text editor to configure **`octapush.docs`** as your need.
 4. Open **index.html** using your browser to see the result.
 5. Upload **`octapush.docs`** files into your web server (hosting) if you need to make your document can be opened on internet.
 6. Create a repository on GitHub, and upload all your documentation files on a folder on GitHub.
-6. Buat sebuah repository pada GitHub, dan letakkan seluruh file dokumentasi Anda pada sebuah folder di GitHub.
 
 ----
 
