--- a/octapush.docs/03.Installations.md
+++ b/octapush.docs/03.Installations.md
@@ -4,7 +4,7 @@ On this page, I will explain about how to installing **`octapush.docs`**.
 
 1. [Download](/#02.Download.md) the **`octapush.docs`** package according to the [version](/#06.Versions.md) you want.
 2. Extract the package into folder as you can see on the image below.
-![Image of Yaktocat](https://octodex.github.com/images/yaktocat.png)
+![octapush.docs extracted package](https://cdn.rawgit.com/octapush/documentations/ee142537/octapush.docs/assets/images/extracted-octapushdocs-package.PNG)
 3. Open **index.html** and **configs.js** using text editor to configure **`octapush.docs`** as your need.
 4. Open **index.html** using your browser to see the result.
 5. Upload **`octapush.docs`** files into your web server (hosting) if you need to make your document can be opened on internet.
