--- a/octapush.docs/10.About.md
+++ b/octapush.docs/10.About.md
@@ -1,12 +1,12 @@
 # About ‏**`octapush.docs`**
 
-**`octapush.docs`** maded with love by:
+**`octapush.docs`** was built lovingly by:
 
 InfoType      | Descriptions
 ------------- | ------------
 Author        | Fadhly Permata
 eMail         | fadhly.permata@gmail.com
-URL           | [http://fadhly.hol.es]()
+URL           | http://fadhly.hol.es
 StackOverflow | [http://stackoverflow.com/users/story/4147978]()
 GitHub        | [https://github.com/fadhly-permata]()
 LinkedIn      | [https://www.linkedin.com/in/fadhlypermata]()
