--- a/octapush.docs/10.About.md
+++ b/octapush.docs/10.About.md
@@ -7,8 +7,8 @@ InfoType      | Descriptions
 Author        | Fadhly Permata
 eMail         | fadhly.permata@gmail.com
 URL           | http://fadhly.hol.es
-StackOverflow | [http://stackoverflow.com/users/story/4147978]()
-GitHub        | [https://github.com/fadhly-permata]()
-LinkedIn      | [https://www.linkedin.com/in/fadhlypermata]()
+StackOverflow | http://stackoverflow.com/users/story/4147978
+GitHub        | https://github.com/fadhly-permata
+LinkedIn      | https://www.linkedin.com/in/fadhlypermata
 
 You can freely to contacting me, even just to say "Hello" ^_^
