--- a/octapush.docs/06.Refferences/01.Mastering Markdown/08.Blockquotes.md
+++ b/octapush.docs/06.Refferences/01.Mastering Markdown/08.Blockquotes.md
@@ -2,7 +2,7 @@
 
 Markdown uses email-style `>` characters for blockquoting. If you're familiar with quoting passages of text in an email message, then you know how to create a blockquote in Markdown. It looks best if you hard wrap the text and put a `>` before every line:
 
-```
+```text
 > This is a blockquote with two paragraphs. Lorem ipsum dolor sit amet,
 > consectetuer adipiscing elit. Aliquam hendrerit mi posuere lectus.
 > Vestibulum enim wisi, viverra nec, fringilla in, laoreet vitae, risus.
