--- a/octapush.docs/06.Refferences/01.Mastering Markdown/08.Blockquotes.md
+++ b/octapush.docs/06.Refferences/01.Mastering Markdown/08.Blockquotes.md
@@ -13,7 +13,7 @@ Markdown uses email-style `>` characters for blockquoting. If you're familiar wi
 
 Markdown allows you to be lazy and only put the `>` before the first line of a hard-wrapped paragraph:
 
-```
+```text
 > This is a blockquote with two paragraphs. Lorem ipsum dolor sit amet,
 consectetuer adipiscing elit. Aliquam hendrerit mi posuere lectus.
 Vestibulum enim wisi, viverra nec, fringilla in, laoreet vitae, risus.
@@ -23,7 +23,7 @@ id sem consectetuer libero luctus adipiscing.
 ```
 
 Blockquotes can be nested (i.e. a blockquote-in-a-blockquote) by adding additional levels of `>`:
-```
+```text
 > This is the first level of quoting.
 >
 > > This is nested blockquote.
@@ -33,7 +33,7 @@ Blockquotes can be nested (i.e. a blockquote-in-a-blockquote) by adding addition
 
 Blockquotes can contain other Markdown elements, including headers, lists, and code blocks:
 
-```
+```text
 > ## This is a header.
 > 
 > 1.   This is the first list item.
