--- a/octapush.docs/06.Refferences/01.Mastering Markdown/03.Introduction.md
+++ b/octapush.docs/06.Refferences/01.Mastering Markdown/03.Introduction.md
@@ -11,7 +11,7 @@ Markdown has since been re-implemented by others as a Perl module available on C
 ### Use Cases
 Markdown is used in **GitHub, GitBook, Reddit, Diaspora, Stack Overflow, OpenStreetMap,** and many others.
 
-Even this book is written using Markdown: [Raw content of this page](https://raw.githubusercontent.com/GitbookIO/markdown/master/about/README.md).
+Even this book is written using Markdown: [Raw content of this page](https://github.com/octapush/documentations/tree/master/octapush.docs/).
 
 ### Files
 A markdown document is a text file with the `.md` extension. You can open a markdown file using a simple text editor.
