--- a/octapush.docs/06.Refferences/01.Mastering Markdown/07.Block Elements.md
+++ b/octapush.docs/06.Refferences/01.Mastering Markdown/07.Block Elements.md
@@ -8,4 +8,4 @@ The implication of the "one or more consecutive lines of text" rule is that Mark
 
 When you do want to insert a `<br />` break tag using Markdown, you end a line with two or more spaces, then type return.
 
-Yes, this takes a tad more effort to create a `<br />`, but a simplistic "every line break is a `<br />`" rule wouldn't work for Markdown. Markdown's email-style [blockquoting](https://roachhd.gitbooks.io/master-markdown/content/syntax/block-elements.html#blockquote) and multi-paragraph [list items](https://roachhd.gitbooks.io/master-markdown/content/syntax/block-elements.html#list) work best -- and look better -- when you format them with hard breaks.
+Yes, this takes a tad more effort to create a `<br />`, but a simplistic "every line break is a `<br />`" rule wouldn't work for Markdown. Markdown's email-style [blockquoting](#/06.Refferences/01.Mastering%20Markdown/08.Blockquotes.md) and multi-paragraph [list items](#/06.Refferences/01.Mastering%20Markdown/13.Lists.md) work best -- and look better -- when you format them with hard breaks.
