--- a/octapush.docs/06.Refferences/01.Mastering Markdown/09.Code Blocks.md
+++ b/octapush.docs/06.Refferences/01.Mastering Markdown/09.Code Blocks.md
@@ -10,7 +10,7 @@ This is a code block
 To produce a code block in Markdown, simply indent every line of the block by at least 4 spaces or 1 tab.
 
 For example:
-```
+```text
 This is a normal paragraph:
 
     This is a code block.
@@ -18,7 +18,7 @@ This is a normal paragraph:
 
 You can also create code block separated by:
 
-```
+```text
     ```
 ```
 
@@ -27,7 +27,7 @@ You can also create code block separated by:
 Inline code blocks can be written using: **`**
 
 For example:
-```
+```text
 This is a `inline code block`
 ```
 
@@ -35,7 +35,7 @@ This is a `inline code block`
 
 You can define the language to be used for syntax highlighting by adding the name on the opening tag. Example:
 
-```
+```text
     ```js
     var a = {};
     ```
