--- a/octapush.docs/11.About.md
+++ b/octapush.docs/11.About.md
@@ -2,13 +2,13 @@
 
 **`octapush.docs`** was built lovingly by:
 
-InfoType      | Descriptions
-------------- | ------------
-Author        | Fadhly Permata
-eMail         | fadhly.permata@gmail.com
-URL           | http://fadhly.hol.es
-StackOverflow | http://stackoverflow.com/users/story/4147978
-GitHub        | https://github.com/fadhly-permata
-LinkedIn      | https://www.linkedin.com/in/fadhlypermata
+InfoType        | Descriptions
+--------------: | ------------
+Author :        | Fadhly Permata
+eMail :         | fadhly.permata@gmail.com
+URL :           | http://fadhly.hol.es
+StackOverflow : | http://stackoverflow.com/users/story/4147978
+GitHub :        | https://github.com/fadhly-permata
+LinkedIn :      | https://www.linkedin.com/in/fadhlypermata
 
 You can freely to contacting me, even just to say "Hello" ^_^
