Mastering Markdown Improvements

--- a/octapush.docs/06.Refferences/01.Mastering Markdown/04.File Extensions.md
+++ b/octapush.docs/06.Refferences/01.Mastering Markdown/04.File Extensions.md
@@ -1,7 +1,7 @@
 # File Extensions
 There is no requirement for a Markdown file extension, as other answers have explained. But in order for editors or parsers to guarantee that the file they are using is Markdown-formatted, they would look for one of the following extensions:
 
-```
+```text
 .markdown
 .mdown
 .mkdn
