--- a/octapush.docs/06.Refferences/01.Mastering Markdown/06.Anchors.md
+++ b/octapush.docs/06.Refferences/01.Mastering Markdown/06.Anchors.md
@@ -2,6 +2,6 @@
 
 To create an anchor to a heading in github flavored markdown. Add - characters between each word in the heading and wrap the value in parens `(#some-markdown-heading)` so your link should look like so:
 
-```
+```text
 [create an anchor](#anchors-in-markdown)
 ```
