--- a/octapush.docs/06.Refferences/01.Mastering Markdown/12.Links.md
+++ b/octapush.docs/06.Refferences/01.Mastering Markdown/12.Links.md
@@ -6,7 +6,7 @@ In both styles, the link text is delimited by [square brackets].
 
 To create an inline link, use a set of regular parentheses immediately after the link text’s closing square bracket. Inside the parentheses, put the URL where you want the link to point, along with an optional title for the link, surrounded in quotes. For example:
 
-```
+```text
 [I'm an inline-style link](https://www.google.com)
 
 [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
