--- a/octapush.docs/01.Introduction.md
+++ b/octapush.docs/01.Introduction.md
@@ -22,13 +22,14 @@ As a simple explanation, **`octapush.docs`** is a file explorer (and viewer) for
 2. **`octapush.docs`** is designed with a simple and beautiful look.
 3. **`octapush.docs`** using a responsive design that supports a wide range of the latest browser technologies both on desktop computers and on mobile browsers technology.
 4. **`octapush.docs`** makes it easy to present your documentation, by updating (create, update, remove) your files from [GitHub](https://github.com), then **`octapush.docs`** will be updated automatically.
-5. Have capability to handle lot file types. Although specially designed to handle [_MARKDOWN_](https://en.wikipedia.org/wiki/Markdown) file, **`octapush.docs`** still supports other files like _HTM, HTML, XHTML, JPG, BMP, GIF, PNG, JS, CSS, C, TXT, and/or other file types_.
-6. Code preview with auto detect language support.
-7. Simple forum for each your document (next feature).
-8. You can host **`octapush.docs`** anywhere you want. But, in the future we will add free hosting and free subdomain (for the detail, see [Next Improvement](#next-improvement) section).
-9. Easy installation. **`octapush.docs`** is designed only by using HTML5 and JavaScript technology to perform dynamic actions. So you do not have to worry about the type of _web-server_, version, or type of _operating-system_ you have. **`octapush.docs`** is only processed on the _client-side_. For the _server-side_, we use features from the [GitHub API](https://api.github.com/).
-10. Easy configuration. **`octapush.docs`** designed with easy and very minimal configuration.
-11. Lightweight, and not needing hosting with big bandwidth.
+5. Collaborative. Of course. Since we have used GitHub to put documentation files, so you can work together with your team to manage the documentations.
+6. Have capability to handle lot file types. Although specially designed to handle [_MARKDOWN_](https://en.wikipedia.org/wiki/Markdown) file, **`octapush.docs`** still supports other files like _HTM, HTML, XHTML, JPG, BMP, GIF, PNG, JS, CSS, C, TXT, and/or other file types_.
+7. Code preview with auto detect language support.
+8. Simple forum for each your document (next feature).
+9. You can host **`octapush.docs`** anywhere you want. But, in the future we will add free hosting and free subdomain (for the detail, see [Next Improvement](#next-improvement) section).
+10. Easy installation. **`octapush.docs`** is designed only by using HTML5 and JavaScript technology to perform dynamic actions. So you do not have to worry about the type of _web-server_, version, or type of _operating-system_ you have. **`octapush.docs`** is only processed on the _client-side_. For the _server-side_, we use features from the [GitHub API](https://api.github.com/).
+11. Easy configuration. **`octapush.docs`** designed with easy and very minimal configuration.
+12. Lightweight, and not needing hosting with big bandwidth.
 
 ----
 
@@ -73,10 +74,3 @@ We will fix all of the issues and/or bugs as soon as possible.
 You can [fork](https://github.com/octapush/octapush.docs) or [download](#/02.Download.md) **`octapush.docs`** with certain [license](#/07.License.md).
 
 Because I built **`octapush.docs`** alone, the **`octapush.docs`** development process becomes very slow and limited. If you are willing, you can help me with the various ways you can (ideas, concepts, techniques, development assistance, criticism, etc.). Do not hesitate, contact me through [the following link](#/10.About.md).
-
-----
-
-# Developer Message
-In the current state **`octapush.docs`** is still in the development stage, and not ready for production use.
-
-**We HIGHLY does not recommend you to use it.**
