--- a/octapush.docs/02.Download.md
+++ b/octapush.docs/02.Download.md
@@ -2,6 +2,6 @@
 
 Currently **`octapush.docs`** in the first release stage, there are still many development ideas that we will do. To get the latest version of **`octapush.docs`**, you can download it via the link below.
 
-[Download Latest Version of **`octapush.docs`**](https://github.com/octapush/octapush.docs/archive/v1.0.0-alpha.zip)
+[Download Latest Version of **`octapush.docs`**](https://github.com/octapush/octapush.docs/archive/v1.0.0.zip)
 
-For the details of the features contained in each version, you can see it on the [Versions](#/07.Versions.md) page.
+To get the previous version and read the details of the features contained in each version, you can see it on the [Versions](#/07.Versions.md) page.
