--- a/octapush.docs/03.Installations.md
+++ b/octapush.docs/03.Installations.md
@@ -14,4 +14,4 @@ On this page, I will explain about how to installing **`octapush.docs`**.
 
 **Tips :**
 - You can expand **Configurations** menu to accessing detail informations about [Basic Settings](#/04.Configurations/01.Basic%20Configurations.md), [Common](#/04.Configurations/02.Behaviour/01.Common.md) Behaviour Settings, [Side Menu](#/04.Configurations/02.Behaviour/02.Side%20Menu.md) Behaviour Settings, [Page](#/04.Configurations/02.Behaviour/03.Page.md) Behaviour Settings, And [Footer](#/04.Configurations/02.Behaviour/04.Footer.md) Behaviour Settings.
-- You can expand **Documenting** menu to accessing detail informations about [Basic Documenting Knowledge](#/05.Documenting/01.Basic%20Knowledge.md), [Creating Document](#/05.Documenting/02.Create%20Document.md) information, [Editing Document](#/05.Documenting/03.Update%20Document.md) information, and [Deleting Dokumen](#/05.Documenting/04.Delete%20Document.md) information.s
+- You can expand **Documenting** menu to accessing detail informations about [Basic Documenting Knowledge](#/05.Documenting/01.Basic%20Knowledge.md), [Creating Document](#/05.Documenting/02.Create%20Document.md) information, [Editing Document](#/05.Documenting/03.Update%20Document.md) information, and [Deleting Document](#/05.Documenting/04.Delete%20Document.md) information.
