--- a/octapush.docs/07.Versions.md
+++ b/octapush.docs/07.Versions.md
@@ -1,5 +1,28 @@
 # Versions
 
+**v1.0.0-beta.1**
+
+This version has major improvements, there are:
+- Code improvements
+- Change name and URL for footer
+- Fix url of octapush.docs demo
+- Dissalow directory index
+- Improve readme.md
+- Improve index.html
+- Remove unecessary files and directories
+
+**[Download v1.0.0 Stable](https://github.com/octapush/octapush.docs/archive/v1.0.0.zip)**
+
+----
+
+**v1.0.0-beta.1**
+
+On this version I am only cleansing unused files.
+
+**[Download v1.0.0-beta.1](https://github.com/octapush/octapush.docs/archive/v1.0.0-beta.1.zip)**
+
+----
+
 **v1.0.0-alpha**
 
 This version is the first release version of **`octapush.docs`**. The features contained in this version include:
@@ -10,3 +33,5 @@ This version is the first release version of **`octapush.docs`**. The features c
 - Added plugin scroll bar.
 - Added plugin code highlight.
 - Support for bookmarks (hard links).
+
+**[Download v1.0.0-alpha](https://github.com/octapush/octapush.docs/archive/v1.0.0-alpha.zip)**
