add basic configuration

--- a/octapush.docs/04.Configurations/01.Basic Configurations.md
+++ b/octapush.docs/04.Configurations/01.Basic Configurations.md
@@ -1,3 +1,52 @@
 # Basic Configurations
 
-Ini adalah content basic configurations
+**`octapush.docs`** has many configurations that you can customize to suit different needs and views. However, on this page, I will only discuss how to configure **`octapush.docs`** fundamentally. The main discussion on this page is the technique of initializing octapush.docs to be able to display your files that are in the GitHub repository.
+
+There are two files you can configure, the **index.html** and **configs.js** files (for those of you who are developers, of course, can open other files).
+
+### **index.html**
+First, we will discuss the configuration in the **index.html** file. Unless you're a web developer, there's not much configuration you need to do on this page, which is actually still configurable through the configs.js file.
+
+Open the **index.html** file using the text editor, whose contents are more or less like in the following figure:
+
+![index.html configurations](https://cdn.rawgit.com/octapush/documentations/be0fdca4/octapush.docs/00.ASSETS/images/index-html-configurations.PNG)
+
+In the picture above, there are three main points you need to note (marked with a red box), namely:
+
+- **title :** Is used to set the application title or title of your documentation on a web browser.
+
+- **data-background-color :** Used to set the background color on the side menu. There are two colors that you can use: `brown` and `white`.
+
+- **data-active-color :** Used to set the text color on the side menu. There are five text colors that you can use: `primary`, `info`, `success`, `warning`, and `danger`.
+
+### **configs.js**
+The basic configuration you need to do to ensure your documentation can be displayed by octapush.docs is by configuring configuration in the configs.js file.
+
+See the following picture:
+
+![configs.js configurations](https://cdn.rawgit.com/octapush/documentations/be0fdca4/octapush.docs/00.ASSETS/images/configs-js-basic-conf.PNG)
+
+There are some basic configuration points you can set to make sure your documentation files can be loaded by octapush.docs, which include:
+
+ConfigName                      | Descriptions
+------------------------------: | ------------
+_**title**_                     | Is used to set the application title or title of your documentation on a web browser.
+_**githubData > owner**_        | Is the owner of the github repository that will be binded inside octapush.docs
+_**githubData > project**_      | Is the name of your project on the GitHub repository.
+_**githubData > branch**_       | Is a branch that will be loaded by octapush.docs.
+_**githubData > docDirectory**_ | Is the name of the directory that will load the files.
+
+See the following figure for detailed information on the GitHub data you need.
+![configs.js configurations](https://cdn.rawgit.com/octapush/documentations/be0fdca4/octapush.docs/00.ASSETS/images/github-octadoc-repository.PNG)
+
+No | Descriptions
+-: | ------------
+1  | _**owner**_
+2  | _**project**_
+3  | _**branch**_
+4  | _**docDirectory**_
+
+----
+**Tips :**
+- For those of you who have never used GitHub, you can see  [git/github guide by Karl Broman](http://kbroman.org/github_tutorial/).
+- For text editors, we recommend the use of [Visual Studio Code](https://code.visualstudio.com/). Many plugins that can facilitate you in processing the documentation files, which include the plugin GitHub Repository, Markdown Preview plugin, and so forth.
