fixing images url

--- a/octapush.docs/04.Configurations/01.Basic Configurations.md
+++ b/octapush.docs/04.Configurations/01.Basic Configurations.md
@@ -9,7 +9,7 @@ First, we will discuss the configuration in the **index.html** file. Unless you'
 
 Open the **index.html** file using the text editor, whose contents are more or less like in the following figure:
 
-![index.html configurations](https://cdn.rawgit.com/octapush/documentations/be0fdca4/octapush.docs/00.ASSETS/images/index-html-configurations.PNG)
+![index.html configurations](https://cdn.rawgit.com/octapush/documentations/38bc0041/octapush.docs/00.ASSETS/images/index-html-configurations.png)
 
 In the picture above, there are three main points you need to note (marked with a red box), namely:
 
@@ -24,7 +24,7 @@ The basic configuration you need to do to ensure your documentation can be displ
 
 See the following picture:
 
-![configs.js configurations](https://cdn.rawgit.com/octapush/documentations/be0fdca4/octapush.docs/00.ASSETS/images/configs-js-basic-conf.PNG)
+![configs.js configurations](https://cdn.rawgit.com/octapush/documentations/38bc0041/octapush.docs/00.ASSETS/images/configs-js-basic-conf.png)
 
 There are some basic configuration points you can set to make sure your documentation files can be loaded by octapush.docs, which include:
 
@@ -37,7 +37,7 @@ _**githubData > branch**_       | Is a branch that will be loaded by octapush.do
 _**githubData > docDirectory**_ | Is the name of the directory that will load the files.
 
 See the following figure for detailed information on the GitHub data you need.
-![configs.js configurations](https://cdn.rawgit.com/octapush/documentations/be0fdca4/octapush.docs/00.ASSETS/images/github-octadoc-repository.PNG)
+![configs.js configurations](https://cdn.rawgit.com/octapush/documentations/38bc0041/octapush.docs/00.ASSETS/images/github-octadoc-repository.png)
 
 No | Descriptions
 -: | ------------
