--- a/octapush.docs/04.Configurations/01.Basic Configurations.md
+++ b/octapush.docs/04.Configurations/01.Basic Configurations.md
@@ -20,31 +20,33 @@ In the picture above, there are three main points you need to note (marked with 
 - **data-active-color :** Used to set the text color on the side menu. There are five text colors that you can use: `primary`, `info`, `success`, `warning`, and `danger`.
 
 ### **configs.js**
-The basic configuration you need to do to ensure your documentation can be displayed by octapush.docs is by configuring configuration in the configs.js file.
+The basic configuration you need to do to ensure your documentation can be displayed by **`octapush.docs`** is by configuring configuration in the **configs.js** file.
 
 See the following picture:
 
 ![configs.js configurations](https://cdn.rawgit.com/octapush/documentations/38bc0041/octapush.docs/00.ASSETS/images/configs-js-basic-conf.png)
 
-There are some basic configuration points you can set to make sure your documentation files can be loaded by octapush.docs, which include:
+There are some basic configuration points you can set to make sure your documentation files can be loaded by **octapush.docs**, which include:
 
 ConfigName                      | Descriptions
 ------------------------------: | ------------
 _**title**_                     | Is used to set the application title or title of your documentation on a web browser.
 _**githubData > owner**_        | Is the owner of the github repository that will be binded inside octapush.docs
 _**githubData > project**_      | Is the name of your project on the GitHub repository.
-_**githubData > branch**_       | Is a branch that will be loaded by octapush.docs.
+_**githubData > branch**_       | Is a branch that will be loaded by **`octapush.docs`**.
 _**githubData > docDirectory**_ | Is the name of the directory that will load the files.
 
 See the following figure for detailed information on the GitHub data you need.
+
 ![configs.js configurations](https://cdn.rawgit.com/octapush/documentations/38bc0041/octapush.docs/00.ASSETS/images/github-octadoc-repository.png)
 
-No | Descriptions
--: | ------------
-1  | _**owner**_
-2  | _**project**_
-3  | _**branch**_
-4  | _**docDirectory**_
+
+No.   | Descriptions
+----: | ------------
+**1** | _**owner**_
+**2** | _**project**_
+**3** | _**branch**_
+**4** | _**docDirectory**_
 
 ----
 **Tips :**
