--- a/octapush.docs/04.Configurations/01.Basic Configurations.md
+++ b/octapush.docs/04.Configurations/01.Basic Configurations.md
@@ -26,12 +26,12 @@ See the following picture:
 
 ![configs.js configurations](https://cdn.rawgit.com/octapush/documentations/38bc0041/octapush.docs/00.ASSETS/images/configs-js-basic-conf.png)
 
-There are some basic configuration points you can set to make sure your documentation files can be loaded by **octapush.docs**, which include:
+There are some basic configuration points you can set to make sure your documentation files can be loaded by **`octapush.docs`**, which include:
 
 ConfigName                      | Descriptions
 ------------------------------: | ------------
 _**title**_                     | Is used to set the application title or title of your documentation on a web browser.
-_**githubData > owner**_        | Is the owner of the github repository that will be binded inside octapush.docs
+_**githubData > owner**_        | Is the owner of the github repository that will be binded inside **`octapush.docs`**.
 _**githubData > project**_      | Is the name of your project on the GitHub repository.
 _**githubData > branch**_       | Is a branch that will be loaded by **`octapush.docs`**.
 _**githubData > docDirectory**_ | Is the name of the directory that will load the files.
