--- a/octapush.docs/01.Introduction.md
+++ b/octapush.docs/01.Introduction.md
@@ -23,13 +23,15 @@ As a simple explanation, **`octapush.docs`** is a file explorer (and viewer) for
 3. **`octapush.docs`** using a responsive design that supports a wide range of the latest browser technologies both on desktop computers and on mobile browsers technology.
 4. **`octapush.docs`** makes it easy to present your documentation, by updating (create, update, remove) your files from [GitHub](https://github.com), then **`octapush.docs`** will be updated automatically.
 5. Collaborative. Of course. Since we have used GitHub to put documentation files, so you can work together with your team to manage the documentations.
-6. Have capability to handle lot file types. Although specially designed to handle [_MARKDOWN_](https://en.wikipedia.org/wiki/Markdown) file, **`octapush.docs`** still supports other files like _HTM, HTML, XHTML, JPG, BMP, GIF, PNG, JS, CSS, C, TXT, and/or other file types_.
-7. Code preview with auto detect language support.
-8. Simple forum for each your document (next feature).
-9. You can host **`octapush.docs`** anywhere you want. But, in the future we will add free hosting and free subdomain (for the detail, see [Next Improvement](#next-improvement) section).
-10. Easy installation. **`octapush.docs`** is designed only by using HTML5 and JavaScript technology to perform dynamic actions. So you do not have to worry about the type of _web-server_, version, or type of _operating-system_ you have. **`octapush.docs`** is only processed on the _client-side_. For the _server-side_, we use features from the [GitHub API](https://api.github.com/).
-11. Easy configuration. **`octapush.docs`** designed with easy and very minimal configuration.
-12. Lightweight, and not needing hosting with big bandwidth.
+6. Edit your documentation _any-time_ and _any-where_. Hey, GitHub has online editor to edit your files online. So, you does not need to install any text editor.
+7. Have capability to handle lot file types. Although specially designed to handle [_MARKDOWN_](https://en.wikipedia.org/wiki/Markdown) file, **`octapush.docs`** still supports other files like _HTM, HTML, XHTML, JPG, BMP, GIF, PNG, JS, CSS, C, TXT, and/or other file types_.
+8. Code preview with auto detect language support.
+9. Simple forum for each your document (next feature).
+10. You can host **`octapush.docs`** anywhere you want. But, in the future we will add free hosting and free subdomain (for the detail, see [Next Improvement](#next-improvement) section).
+11. Easy installation. **`octapush.docs`** is designed only by using HTML5 and JavaScript technology to perform dynamic actions. So you do not have to worry about the type of _web-server_, version, or type of _operating-system_ you have. **`octapush.docs`** is only processed on the _client-side_. For the _server-side_, we use features from the [GitHub API](https://api.github.com/).
+12. Easy configuration. **`octapush.docs`** designed with easy and very minimal configuration.
+13. Lightweight, and not needing hosting with big bandwidth.
+14. etc.
 
 ----
 
