--- a/octapush.docs/04.Configurations/01.Basic Configurations.md
+++ b/octapush.docs/04.Configurations/01.Basic Configurations.md
@@ -50,5 +50,5 @@ No.   | Descriptions
 
 ----
 **Tips :**
-- For those of you who have never used GitHub, you can see  [git/github guide by Karl Broman](http://kbroman.org/github_tutorial/).
-- For text editors, we recommend the use of [Visual Studio Code](https://code.visualstudio.com/). Many plugins that can facilitate you in processing the documentation files, which include the plugin GitHub Repository, Markdown Preview plugin, and so forth.
+
+For those of you who have never used GitHub, you can see  [git/github guide by Karl Broman](http://kbroman.org/github_tutorial/).
