--- a/octapush.docs/04.Configurations/01.Basic Configurations.md
+++ b/octapush.docs/04.Configurations/01.Basic Configurations.md
@@ -1,11 +1,11 @@
 # Basic Configurations
 
-**`octapush.docs`** has many configurations that you can customize to suit different needs and views. However, on this page, I will only discuss how to configure **`octapush.docs`** fundamentally. The main discussion on this page is the technique of initializing octapush.docs to be able to display your files that are in the GitHub repository.
+**`octapush.docs`** has many configurations that you can customize to suit different needs and views. However, on this page, I will only discuss how to configure **`octapush.docs`** fundamentally. The main discussion on this page is the technique of initializing **`octapush.docs`** to be able to display your files that are in the GitHub repository.
 
 There are two files you can configure, the **index.html** and **configs.js** files (for those of you who are developers, of course, can open other files).
 
 ### **index.html**
-First, we will discuss the configuration in the **index.html** file. Unless you're a web developer, there's not much configuration you need to do on this page, which is actually still configurable through the configs.js file.
+First, we will discuss the configuration in the **index.html** file. Unless you're a web developer, there's not much configuration you need to do on this page, which is actually still configurable through the **configs.js** file.
 
 Open the **index.html** file using the text editor, whose contents are more or less like in the following figure:
 
