--- a/octapush.docs/04.Configurations/02.Behaviour/01.Common.md
+++ b/octapush.docs/04.Configurations/02.Behaviour/01.Common.md
@@ -1,3 +1,15 @@
 # Common Configurations
 
-Ini adalah content common configurations
+Pada halaman ini saya akan menjelaskan tentang mengkonfigurasi kelakukan aplikasi **`octapush.docs`**.
+
+ ![configs.js configurations](https://cdn.rawgit.com/octapush/documentations/38bc0041/octapush.docs/00.ASSETS/images/configs-js-behave-common.png)
+
+ seperti yang terlihat pada gambar diatas, terdapat lima konfigurasi yang dapat diatur sesuai dengan kebutuhan dan keinginan Anda, berikut adalah penjelasan dari setiap konfigurasi di atas:
+
+ConfigName                      | Descriptions
+------------------------------: | ------------
+_**applicationTitleCase**_      | Digunakan untuk mengatur bentuk huruf **Title** pada browser. Nilai-nilai yang dapat Anda gunakan pada konfigurasi ini adalah:<br /><br />`as-is`: Untuk menampilkan bentuk huruf penulisan secara apa adanya, sesuai dengan bentuk yang Anda tuliskan.<br /><br />`capitalize`: Untuk menampilkan bentuk penulisan secara kapital.<br /><br />`uppercase`: Digunakan untuk menampilkan bentuk penulisan dengan huruf besar semua.<br /><br />`lowercase`: Digunakan untuk menampilkan bentuk penulisan dengan huruf kecil semua.
+_**docTitleType**_              | Digunakan untuk mengatur pola **title** yang akan ditampilkan pada browser. Nilai-nilai yang dapat Anda gunakan pada konfigurasi ini adalah:<br /><br />`app`: Dengan menggunakan nilai ini, maka caption pada browser hanya akan ditampilkan nama aplikasi saja.<br /><br />`page`: Dengan menggunakan nilai ini, maka caption pada browser hanya akan ditampilkan nama halaman yang sedang aktif.<br /><br />`combine`: Dengan menggunakan nilai ini, maka caption browser akan menampilkan nama aplikasi dan nama halaman yang sedang aktif.
+_**docTitleCombineSeparator**_  | Adalah karakter yang akan digunakan sebagai karakter pembatas judul. Anda dapat menggunakan karakter apa pun yang Anda inginkan.<br /><br />**Catatan :**<br />Fitur ini hanya akan aktif apabila konfigurasi _**docTitleType**_ menggunakan value `combine` saja.
+_**openExternalLinkOnNewTab**_  | Apabila bernilai `true` maka setiap link eksternal akan dibuka melalui tab baru. Sebaliknya, bila bernilai `false` maka link eksternal akan dibuka pada tab yang sama dan menimpa jendela **`octapush.docs`**.
+_**scrollSpeed**_               | Konfigurasi ini digunakan untuk mengatur _speed_ animasi pada saat user mengklik suatu link yang bertautan dengan komponen anchor.<br /><br />Nilai yang digunakan pada konfigurasi ini adalah nilai numeric dengan satuan milliseconds. semakin besar nilai yang digunakan maka semakin lambat pergerakan animasinya.
