--- a/octapush.docs/04.Configurations/02.Behaviour/01.Common.md
+++ b/octapush.docs/04.Configurations/02.Behaviour/01.Common.md
@@ -1,15 +1,15 @@
 # Common Configurations
 
-Pada halaman ini saya akan menjelaskan tentang mengkonfigurasi kelakukan aplikasi **`octapush.docs`**.
+On this page I will explain how to configure the **`octapush.docs`** application behavior.
 
- ![configs.js configurations](https://cdn.rawgit.com/octapush/documentations/38bc0041/octapush.docs/00.ASSETS/images/configs-js-behave-common.png)
+ ![configs.js configurations](https://cdn.rawgit.com/octapush/documentations/09344e6b/octapush.docs/00.ASSETS/images/configs-js-behave-common.png)
 
- seperti yang terlihat pada gambar diatas, terdapat lima konfigurasi yang dapat diatur sesuai dengan kebutuhan dan keinginan Anda, berikut adalah penjelasan dari setiap konfigurasi di atas:
+ As seen in the picture above, there are five configurations that can be adjusted according to your needs and desires, here is an explanation of each configuration above:
 
 ConfigName                      | Descriptions
 ------------------------------: | ------------
-_**applicationTitleCase**_      | Digunakan untuk mengatur bentuk huruf **Title** pada browser. Nilai-nilai yang dapat Anda gunakan pada konfigurasi ini adalah:<br /><br />`as-is`: Untuk menampilkan bentuk huruf penulisan secara apa adanya, sesuai dengan bentuk yang Anda tuliskan.<br /><br />`capitalize`: Untuk menampilkan bentuk penulisan secara kapital.<br /><br />`uppercase`: Digunakan untuk menampilkan bentuk penulisan dengan huruf besar semua.<br /><br />`lowercase`: Digunakan untuk menampilkan bentuk penulisan dengan huruf kecil semua.
-_**docTitleType**_              | Digunakan untuk mengatur pola **title** yang akan ditampilkan pada browser. Nilai-nilai yang dapat Anda gunakan pada konfigurasi ini adalah:<br /><br />`app`: Dengan menggunakan nilai ini, maka caption pada browser hanya akan ditampilkan nama aplikasi saja.<br /><br />`page`: Dengan menggunakan nilai ini, maka caption pada browser hanya akan ditampilkan nama halaman yang sedang aktif.<br /><br />`combine`: Dengan menggunakan nilai ini, maka caption browser akan menampilkan nama aplikasi dan nama halaman yang sedang aktif.
-_**docTitleCombineSeparator**_  | Adalah karakter yang akan digunakan sebagai karakter pembatas judul. Anda dapat menggunakan karakter apa pun yang Anda inginkan.<br /><br />**Catatan :**<br />Fitur ini hanya akan aktif apabila konfigurasi _**docTitleType**_ menggunakan value `combine` saja.
-_**openExternalLinkOnNewTab**_  | Apabila bernilai `true` maka setiap link eksternal akan dibuka melalui tab baru. Sebaliknya, bila bernilai `false` maka link eksternal akan dibuka pada tab yang sama dan menimpa jendela **`octapush.docs`**.
-_**scrollSpeed**_               | Konfigurasi ini digunakan untuk mengatur _speed_ animasi pada saat user mengklik suatu link yang bertautan dengan komponen anchor.<br /><br />Nilai yang digunakan pada konfigurasi ini adalah nilai numeric dengan satuan milliseconds. semakin besar nilai yang digunakan maka semakin lambat pergerakan animasinya.
+_**applicationTitleCase**_      | Used to set the **Title** text case in the browser. The values that you can use in this configuration are:<br /><br />`as-is`: To display the form letter writing as is, according to the form you write.<br /><br />`capitalize`: To display the form of capital writing..<br /><br />`uppercase`: Used to display the form of writing with all capital letters.<br /><br />`lowercase`: Used to display the form of writing with all lowercase.
+_**docTitleType**_              | Used to set the **Title** to be displayed in the browser. The values that you can use in this configuration are:<br /><br />`app`: By using this value, then the caption in the browser will only show the name of the application only.<br /><br />`page`: By using this value, then the caption in the browser will only display the name of the active page.<br /><br />`combine`: By using this value, the browser caption will display the name of the application and the name of the active page.
+_**docTitleCombineSeparator**_  | Is a character that will be used as a title delimiter character. You can use whatever character you want.<br /><br />**Note :**<br />This feature will only be active if the _**docTitleType**_ configuration uses the `combine` value only.
+_**openExternalLinkOnNewTab**_  | If the value is `true` then any external links will be opened through a new tab. Conversely, if the value `false` then the external link will be opened on the same tab and overwrite **`octapush.docs`** window.
+_**scrollSpeed**_               | This configuration is used to set _speed_ animation when the user clicks on a link that links to the anchor component.<br /><br />The value used in this configuration is a numeric value with milliseconds. The greater the value used, the slower the movement of animation.
