--- a/octapush.docs/04.Configurations/01.Basic Configurations.md
+++ b/octapush.docs/04.Configurations/01.Basic Configurations.md
@@ -48,7 +48,14 @@ No.   | Descriptions
 **3** | _**branch**_
 **4** | _**docDirectory**_
 
-----
+- - -
+
+**Warning :**
+Because **`octapush.docs`** is designed to meet the needs of product documentation, and to facilitate you in processing documentation files (as well as supporting files) the documentation files must be placed in a folder (directory) in the repository (as shown in the image above). This concept lets you put the source code of your product and your documentation files simultaneously on a github repository.
+
+- - -
+
+
 **Tips :**
 
 For those of you who have never used GitHub, you can see  [git/github guide by Karl Broman](http://kbroman.org/github_tutorial/).
