--- a/octapush.docs/04.Configurations/02.Behaviour/02.Side Menu.md
+++ b/octapush.docs/04.Configurations/02.Behaviour/02.Side Menu.md
@@ -1,3 +1,34 @@
 # Side Menu Configurations
 
-Ini adalah content side menu configurations
+Pada halaman ini saya akan menjelaskan tentang bagaimana cara mengkonfigurasi tampilan sidemenu pada dokumentasi Anda.
+
+![configs.js configurations](https://cdn.rawgit.com/octapush/documentations/09344e6b/octapush.docs/00.ASSETS/images/configs-js-behave-sidemenu.png)
+
+Seperti yang dapat Anda lihat pada gambar di atas, pada area yang ditandai dengan kotak berwarna merah, terdapat tujuh konfigurasi yang dapat Anda atur sesuai dengan kebutuhan Anda.
+
+Berikut adalah penjelesan untuk setiap konfigurasi tersebut.
+
+ConfigName                      | Descriptions
+------------------------------: | ------------
+_**textCase**_                  | Used to set the menu text case in the side menu. The values that you can use in this configuration are:<br /><br />`as-is`: To display the form letter writing as is, according to the form you write.<br /><br />`capitalize`: To display the form of capital writing.<br /><br />`uppercase`: Used to display the form of writing with all capital letters.<br /><br />`lowercase`: Used to display the form of writing with all lowercase.
+_**background**_                | Used to set the background color on the side menu. There are two colors that you can use: `brown` and `white`.
+_**color**_                     | Used to set the text color on the side menu. There are five text colors that you can use: `primary`, `info`, `success`, `warning`, and `danger`.
+_**useNumberOnFileNameToSort**_ | By default, **`octapush.docs`** will sort your files alphabetically. However, you can sort it to suit your liking. Give `true` value to this configuration, then menu list on side menu Will be arranged based on the serial number. And hide the sequence number automatically. If you do not want to enable this feature, you can provide a `false` value for this configuration.<br /><br />**Note :**<br />View [Custom Sort Menu](#custom-sort-menu) sessions for how to set menu order list.
+_**showMdFilesOnly**_           | If `true` then only Markdown files will be displayed on the side menu. Conversely when `false` value, then all types of files will be displayed.
+_**hideEmptyDirectory**_        | If `true` then the empty directory (not containing any files) will be hidden. Conversely, if the value is `false`, then the empty directory will still be displayed.
+_**hideFilesOrDirectory**_      | This configuration uses the Array String data type, which is used to hide folders and/or files that you do not want to display in octapush.docs. See [Hide File or Directory](#hide-file-or-directory) sessions for more detailed techniques.
+
+- - -
+
+# Custom Sort Menu
+To arrange the menu according to your needs you need to provide a `true` value in the _**useNumberOnFileNameToSort**_ configuration and provide a sequential number at the beginning of your documentation file name and accompanied by a dot `( . )` as you can see in the following picture:
+
+
+![custom sort menu](https://cdn.rawgit.com/octapush/documentations/09344e6b/octapush.docs/00.ASSETS/images/github-octadocs-useNumberOnFileNameToSort.png)
+
+# Hide File or Directory
+You can hide directories or files that you do not want to display in the octapush.docs application by writing file or directory addresses. For each item you will hide, you can separate it by using the comma `( , )` character.
+
+![hide file or directory](https://cdn.rawgit.com/octapush/documentations/09344e6b/octapush.docs/00.ASSETS/images/configs-js-behave-sidemenu-hidding.png)
+
+As you can see, I hide a directory named `00.ASSETS`. And a file named `05.hidden file.md` and the file I put in folder `05.documenting`.
