--- a/octapush.docs/04.Configurations/02.Behaviour/02.Side Menu.md
+++ b/octapush.docs/04.Configurations/02.Behaviour/02.Side Menu.md
@@ -1,12 +1,12 @@
 # Side Menu Configurations
 
-Pada halaman ini saya akan menjelaskan tentang bagaimana cara mengkonfigurasi tampilan sidemenu pada dokumentasi Anda.
+On this page, I will explain how to configure your side menu view in your documentation.
 
 ![configs.js configurations](https://cdn.rawgit.com/octapush/documentations/09344e6b/octapush.docs/00.ASSETS/images/configs-js-behave-sidemenu.png)
 
-Seperti yang dapat Anda lihat pada gambar di atas, pada area yang ditandai dengan kotak berwarna merah, terdapat tujuh konfigurasi yang dapat Anda atur sesuai dengan kebutuhan Anda.
+As you can see in the picture above, in the area marked with a red square, there are seven configurations that you can set according to your needs.
 
-Berikut adalah penjelesan untuk setiap konfigurasi tersebut.
+Here is an explanation for each such configuration.
 
 ConfigName                      | Descriptions
 ------------------------------: | ------------
