--- a/octapush.docs/04.Configurations/01.Basic Configurations.md
+++ b/octapush.docs/04.Configurations/01.Basic Configurations.md
@@ -51,7 +51,8 @@ No.   | Descriptions
 - - -
 
 **Warning :**
-Because **`octapush.docs`** is designed to meet the needs of product documentation, and to facilitate you in processing documentation files (as well as supporting files) the documentation files must be placed in a folder (directory) in the repository (as shown in the image above). This concept lets you put the source code of your product and your documentation files simultaneously on a github repository.
+- Please note this: The settings done in the **index.html** file will be overwritten by the settings contained in the **configs.js** file.
+- Because **`octapush.docs`** is designed to meet the needs of product documentation, and to facilitate you in processing documentation files (as well as supporting files) the documentation files must be placed in a folder (directory) in the repository (as shown in the image above). This concept lets you put the source code of your product and your documentation files simultaneously on a github repository.
 
 - - -
 
