--- a/octapush.docs/04.Configurations/02.Behaviour/03.Page.md
+++ b/octapush.docs/04.Configurations/02.Behaviour/03.Page.md
@@ -1,8 +1,8 @@
 # Page Configurations
 
-On this page, I will explain the configuration of octapush.docs in the area of the page. In the configs.js file, in the "page" area, there are nine configurations that you can set according to your needs.
+On this page, I will explain the configuration of octapush.docs in the area of the page.
 
-![configs.js configurations](https://cdn.rawgit.com/octapush/documentations/09344e6b/octapush.docs/00.ASSETS/images/configs-js-behave-page.png)
+![configs.js configurations](https://cdn.rawgit.com/octapush/documentations/e3fbb665/octapush.docs/00.ASSETS/images/configs-js-behave-page.png)
 
  As seen in the picture above, there are five configurations that can be adjusted according to your needs and desires, here is an explanation of each configuration above:
 
