--- a/octapush.docs/04.Configurations/02.Behaviour/03.Page.md
+++ b/octapush.docs/04.Configurations/02.Behaviour/03.Page.md
@@ -1,6 +1,6 @@
 # Page Configurations
 
-On this page, I will explain the configuration of octapush.docs in the area of the page.
+On this page, I will explain the configuration of **`octapush.docs`** in the area of the page.
 
 ![configs.js configurations](https://cdn.rawgit.com/octapush/documentations/e3fbb665/octapush.docs/00.ASSETS/images/configs-js-behave-page.png)
 
@@ -8,9 +8,9 @@ On this page, I will explain the configuration of octapush.docs in the area of t
 
 ConfigName                        | Descriptions
 --------------------------------: | ------------
-_**pathOfInitialPage**_           | Used to set the homepage to be loaded when **`octapush.docs`** is first opened. Give a `first-menu-item` value if you do not want to use the default homepage.<br /><br />If you want to use the homepage page, simply mention the location of the file on your GitHub repository. For example `05.Documenting / 01.Basic Knowledge.md`.<br /><br />**Note :**<br />This feature will be ignored if the user accesses octapush.docs via bookmarks or via hard-links.
-_**supportImageFile**_            | You can provide `true` if you want octapush.docs to support the image file access and render it as an intact image. Conversely, if the value is `false` then octapush.docs will only display the image in binary (text) mode.<br /><br />For now, the supported image files are image files with extension JPG, JPEG, GIF, PNG, BMP.<br /><br />**Note :**<br />This feature will only work if the configuration on the _**sideMenu > showMdFilesOnly**_ session is `true`.
-_**supportMarkupFile**_           | You can provide true if you want octapush.docs to support markup language files (HTM, HTML, XHTML). If you do not want this feature, then give the false value to this configuration so that octapush.docs will present the file in text mode (binary).<br /><br />**Note :**<br />This feature will only work if the configuration on the _**sideMenu > showMdFilesOnly**_ session is `true`.
+_**pathOfInitialPage**_           | Used to set the homepage to be loaded when **`octapush.docs`** is first opened. Give a `first-menu-item` value if you do not want to use the default homepage.<br /><br />If you want to use the homepage page, simply mention the location of the file on your GitHub repository. For example `05.Documenting / 01.Basic Knowledge.md`.<br /><br />**Note :**<br />This feature will be ignored if the user accesses **`octapush.docs`** via bookmarks or via hard-links.
+_**supportImageFile**_            | You can provide `true` if you want **`octapush.docs`** to support the image file access and render it as an intact image. Conversely, if the value is `false` then **`octapush.docs`** will only display the image in binary (text) mode.<br /><br />For now, the supported image files are image files with extension JPG, JPEG, GIF, PNG, BMP.<br /><br />**Note :**<br />This feature will only work if the configuration on the _**sideMenu > showMdFilesOnly**_ session is `true`.
+_**supportMarkupFile**_           | You can provide true if you want **`octapush.docs`** to support markup language files (HTM, HTML, XHTML). If you do not want this feature, then give the false value to this configuration so that **`octapush.docs`** will present the file in text mode (binary).<br /><br />**Note :**<br />This feature will only work if the configuration on the _**sideMenu > showMdFilesOnly**_ session is `true`.
 _**titleCase**_                   | Used to set the **header** text case. The values that you can use in this configuration are:<br /><br />`as-is`: To display the form letter writing as is, according to the form you write.<br /><br />`capitalize`: To display the form of capital writing.<br /><br />`uppercase`: Used to display the form of writing with all capital letters.<br /><br />`lowercase`: Used to display the form of writing with all lowercase.
 _**markdown > encodeUrls**_       | If `true` then every URL contained in your markdown file will be converted into a hyperlink. If the value is `false` then the URL contained in your markdown file will be displayed as is.<br /><br />**Example :**<br />www.google.com
 _**markdown > encodeEmails**_     | If `true` then each text email address will be converted into a hyperlink. If the value is `false` then the text of the email address will be displayed as is.<br /><br />**Contoh :**<br />fadhly.permata@gmail.com
