--- a/octapush.docs/04.Configurations/02.Behaviour/03.Page.md
+++ b/octapush.docs/04.Configurations/02.Behaviour/03.Page.md
@@ -4,7 +4,7 @@ On this page, I will explain the configuration of **`octapush.docs`** in the are
 
 ![configs.js configurations](https://cdn.rawgit.com/octapush/documentations/e3fbb665/octapush.docs/00.ASSETS/images/configs-js-behave-page.png)
 
- As seen in the picture above, there are five configurations that can be adjusted according to your needs and desires, here is an explanation of each configuration above:
+ As seen in the picture above, there are nine configurations that can be adjusted according to your needs and desires, here is an explanation of each configuration above:
 
 ConfigName                        | Descriptions
 --------------------------------: | ------------
